--- a/index.html
+++ b/index.html
@@ -2,23 +2,43 @@
 <html lang="en">
 
 <head>
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
-    rel="stylesheet">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
+            rel="stylesheet">
 
-  <!-- Meta -->
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Icons -->
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/apple/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/apple/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/apple/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/apple/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/apple/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/apple/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/apple/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple/apple-touch-icon-57x57.png">
+    <link rel="mask-icon" href="/assets/images/apple/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/assets/images/mstiles/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
-  <title>Welcome to LightningCards</title>
+    <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+          content="Master any topic with LightningCards - the user-friendly flashcard app that makes learning a breeze."/>
+    <meta name="keywords" content="flashcards, learning, education, study, LightningCards"/>
+    <title>Welcome to LightningCards</title>
 </head>
 
 <body>
-  <script type="module" src="/src/main.js"></script>
+<script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
